# agent-runner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agent-runner.toml  pyproject.toml
docs/: JULES_PROVIDER.md  navigator_persona_prompt.md  prd_agent_runner.md
docs/adr/: ADR-001-agent-runner-architecture.md
personas/: architecture.yaml  performance.yaml  security.yaml  ux.yaml
src/agent_runner/: cli.py
src/agent_runner/core/: config.py  context.py  results.py  runner.py
src/agent_runner/personas/: loader.py  models.py
src/agent_runner/providers/: base.py  jules.py  registry.py  stub.py
